--- a/src/scss/main-header.scss
+++ b/src/scss/main-header.scss
@@ -20,14 +20,16 @@
     justify-content: space-between;
     align-items: center;
     .logo {
-      color: $secondary-color;
-      font-size: $font-size-lg;
-      font-weight: $font-weight-medium;
       text-decoration: none;
-      transition: $transition;
       cursor: pointer;
       img {
         max-width: 230px;
+        @media screen and (max-width: $breakpoint-lg) {
+          max-width: 200px;
+        }
+        @media screen and (max-width: $breakpoint-md) {
+          max-width: 160px;
+        }
       }
     }
     .main-nav {
@@ -72,6 +74,73 @@
           }
         }
       }
+      .close-menu {
+        display: none;
+      }
+      @media screen and (max-width: $breakpoint-lg) {
+        position: absolute;
+        right: -100%;
+        top: 0;
+        background-color: $primary-color;
+        padding: 60px 50px 50px 30px;
+        height: 100vh;
+        border-left: 2px solid $white;
+        z-index: 9;
+        transition: $transition;
+        overflow: auto;
+        &.open {
+          right: 0;
+        }
+        ul {
+          flex-direction: column;
+          align-items: baseline;
+          gap: 40px;
+          li {
+            a {
+              font-size: 24px;
+              line-height: 40px;
+              &:before {
+                bottom: -10px;
+                height: 4px;
+              }
+            }
+          }
+        }
+        .close-menu {
+          display: block;
+          position: absolute;
+          top: 20px;
+          right: 20px;
+          cursor: pointer;
+          background-color: transparent;
+          border: 0;
+          svg {
+            font-size: 2rem;
+            color: $white;
+          }
+        }
+      }
     }
+    .download-resume {
+      @media screen and (max-width: $breakpoint-xl) {
+        display: none;
+      }
+    }
+    .mobile-menu {
+      display: none;
+      background-color: transparent;
+      border: 0;
+      cursor: pointer;
+      @media screen and (max-width: $breakpoint-lg) {
+        display: block;
+        svg {
+          font-size: 2rem;
+          color: $white;
+        }
+      }
+    }
+  }
+  @media screen and (max-width: $breakpoint-xl) {
+    padding: 15px 0;
   }
 }
