--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,6 +8,33 @@
 
 .section {
   height: 100vh;
+  padding-top: 100px;
+  @media screen and (max-width: $breakpoint-lg) {
+    padding-top: 50px;
+  }
+}
+
+.section-header {
+  margin-bottom: 40px;
+  position: relative;
+  color: $secondary-color;
+  font-size: 48px;
+  font-weight: $font-weight-light;
+  font-family: $secondary-font;
+  display: inline-block;
+  @media screen and (max-width: $breakpoint-lg) {
+    font-size: 36px;
+  }
+  &::after {
+    content: '';
+    position: absolute;
+    width: 70px;
+    height: 2px;
+    background-color: $white;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
 
 .button {
@@ -29,6 +56,41 @@
   }
   @media screen and (max-width: $breakpoint-lg) {
     padding: 8px 16px;
+    font-size: 14px;
+  }
+  &.solid {
+    background-color: $white;
+    color: $primary-color;
+    border: 2px solid $white;
+    &:hover {
+      background-color: $primary-color;
+      color: $white;
+    }
+  }
+}
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: $white;
+  color: $primary-color;
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 24px;
+  transition: $transition;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &:hover {
+    background-color: $secondary-color;
+    color: $primary-color;
+  }
+  @media screen and (max-width: $breakpoint-lg) {
+    padding: 8px;
     font-size: 14px;
   }
 }
