--- a/src/scss/introduction.scss
+++ b/src/scss/introduction.scss
@@ -16,7 +16,7 @@
     }
     @media screen and (max-width: $breakpoint-sm) {
       flex-direction: column-reverse;
-      top: -40px;
+      top: -20px;
     }
     .content {
       flex: 0 0 70%;
@@ -65,6 +65,15 @@
           text-align: center;
         }
       }
+      .mobile-download {
+        display: none;
+        padding: 20px 0;
+        @media screen and (max-width: $breakpoint-xl) {
+          display: block;
+          margin: 0 auto;
+          margin-bottom: 20px;
+        }
+      }
     }
     .image {
       flex: 0 0 30%;
@@ -101,8 +110,8 @@
           background-color: $secondary-color;
           width: 100%;
           height: 100%;
-          top: 20px;
-          left: 20px;
+          top: 15px;
+          left: 15px;
           @media screen and (max-width: $breakpoint-lg) {
             left: 10px;
             top: 10px;
