--- a/src/scss/introduction.scss
+++ b/src/scss/introduction.scss
@@ -65,7 +65,7 @@
           text-align: center;
         }
       }
-      .mobile-download {
+      .mobile-resume {
         display: none;
         padding: 20px 0;
         @media screen and (max-width: $breakpoint-xl) {
