--- a/src/scss/main-header.scss
+++ b/src/scss/main-header.scss
@@ -121,7 +121,7 @@
         }
       }
     }
-    .download-resume {
+    .resume {
       @media screen and (max-width: $breakpoint-xl) {
         display: none;
       }
