--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,7 +7,7 @@
 }
 
 .section {
-  height: 100vh;
+  min-height: 100vh;
   padding-top: 100px;
   @media screen and (max-width: $breakpoint-lg) {
     padding-top: 50px;
