--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -32,8 +32,7 @@
     height: 2px;
     background-color: $white;
     bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
   }
 }
 
@@ -65,6 +64,53 @@
     &:hover {
       background-color: $primary-color;
       color: $white;
+    }
+  }
+  &.secondary {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    letter-spacing: 0.3px;
+    font-size: 16px;
+    line-height: 30px;
+    transition: $transition;
+    color: $white;
+    font-weight: $font-weight-light;
+    letter-spacing: 1px;
+    border: 0;
+    padding: 5px 0;
+    background-color: transparent;
+    &:before {
+      position: absolute;
+      bottom: -2px;
+      content: '';
+      display: block;
+      width: 100%;
+      height: 2px;
+      background-color: $white;
+      transition: width 0.3s ease-in-out;
+      right: 0;
+      left: auto;
+    }
+    &:after {
+      position: absolute;
+      bottom: -2px;
+      content: '';
+      display: block;
+      width: 0;
+      height: 2px;
+      background-color: $secondary-color;
+      transition: width 0.3s ease-in-out;
+      right: 0;
+      left: auto;
+    }
+    &:hover {
+      color: $tertiary-color;
+      &:after {
+        width: 100%;
+        left: 0;
+        right: auto;
+      }
     }
   }
 }
